--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.9.2",
+    "crypto-js": "^4.2.0",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.4",
     "react": "^18",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
