--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@t3-oss/env-nextjs": "^0.9.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.367.0",
     "next": "14.1.4",
     "react": "^18",
     "react-cookie": "^7.1.4",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
+    "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
