--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -22,11 +22,11 @@
     "crypto-js": "^4.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.367.0",
-    "next": "14.1.4",
-    "react": "^18",
+    "next": "14.2.0",
+    "react": "^18.2.0",
     "react-cookie": "^7.1.4",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.2",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
@@ -36,14 +36,14 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.77",
+    "@types/react-dom": "^18.2.25",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
