--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,11 @@
     "@rocketseat/eslint-config/react",
     "next/core-web-vitals"
   ],
+  "plugins": [
+    "simple-import-sort"
+  ],
   "rules": {
-    "camelcase": "off"
+    "camelcase": "off",
+    "simple-import-sort/imports": "error"
   }
 }
