--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.4",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
