--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "playwright test"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -38,6 +39,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.43.1",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.12.7",
@@ -47,6 +49,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.4",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "playwright": "^1.43.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
