--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "iron-session": "^8.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.367.0",
-    "next": "14.2.0",
+    "next": "14.3.0-canary.37",
     "next-safe-action": "^6.2.0",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
