--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "playwright test"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.0.0",
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.13.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,6 +25,7 @@
     "@tanstack/react-query": "^5.32.1",
     "@tanstack/react-query-devtools": "^5.32.1",
     "@tanstack/react-table": "^8.16.0",
+    "@types/jwt-decode": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
@@ -31,6 +34,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.367.0",
     "next": "14.3.0-canary.37",
+    "next-auth": "5.0.0-beta.17",
     "next-safe-action": "^6.2.0",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
@@ -55,6 +59,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "playwright": "^1.43.1",
     "postcss": "^8.4.38",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
