--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.0",
+    "@casl/ability": "^6.7.1",
+    "@casl/react": "^3.1.0",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-checkbox": "^1.0.4",
