--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.367.0",
-    "next": "14.3.0-canary.37",
+    "next": "14.2.3",
     "next-auth": "5.0.0-beta.17",
     "next-safe-action": "^6.2.0",
     "react": "^18.2.0",
